# anki-smart-notes

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  __init__.py  ankiweb.md  azure_voices.json  changelog.md  config.json  eleven_voices.json  env.py  google_voices.json  manifest.json  mypy.ini  pyproject.toml  pyrightconfig.json  requirements.txt  runbook.md  setup.py  todo.md  voicevox_voices.json
.claude/: format-hook.sh  settings.json
docs/: dev_server_api.md  local_server_api.md
scripts/: build.sh
smart-fields-ui/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
src/: api_client.py  app_state.py  auth_flow.py  chat_provider.py  config.py  config_migrations.py  constants.py  dag.py  database.py  decks.py  dev_server.py  env.py  event_bus.py  feature_flags.py  field_processor.py  field_resolver.py  generation_defaults_migration.py  hooks.py  image_provider.py  image_utils.py  local_server.py  logger.py  main.py  markdown.py  media_utils.py  message_polling.py  migrations.py  models.py  nodes.py  note_proccessor.py  notes.py  open_ai_client.py  processor.py  prompt_fields.py  prompt_helpers.py  prompts.py  review_prepper.py  review_time_evaluator.py  sentry.py  smart_field_migration.py  (+10 more)
tests/: ___init__.py  conftest.py  fake_anki_profiles.py  fixtures.py  support.py  test_api_client.py  test_config_migrations.py  test_custom_prompt.py  test_database.py  test_dev_server.py  test_field_menu.py  test_hooks.py  test_local_server.py  test_logger.py  test_migrations.py  test_processor.py  test_prompt_helpers.py  test_prompts.py  (+9 more)
(+111 files in other folders)
